:construction: link com o BD PlanetScale construido
Link para ligar o site ao BD do planetscale feito com sucesso. Tomar cuidado para não vazar a senha

--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
-    "prisma": "^4.16.2"
+    "prisma": "^4.16.2",
+    "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node --compiler-options {\"module\":\"CommonJS\"} prisma/seed.ts"
   }
 }
