--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "eslint-import-resolver-typescript": "^3.5.5",
     "prisma": "^4.16.2"
   }
 }
